@@ -1,4 +1,8 @@
 2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
+        * SpaceTimeViewer/DrawView+Drawing.m: optimize drawing code for
+          variables
+
+2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
         * StorageController/Encapsulate.m: remove field names discovery
         * General/PajeType.[hm]: add knownEventTypes variable and
           -isKnownEventType: method
